--- a/NullCheckTestApp/NullCheckTestApp.csproj
+++ b/NullCheckTestApp/NullCheckTestApp.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BenchmarkDotNet, Version=0.7.6.0, Culture=neutral, processorArchitecture=MSIL">
